--- a/src/tool/xetodoc/res/css/style.css
+++ b/src/tool/xetodoc/res/css/style.css
@@ -7,6 +7,7 @@
 */
 
 xetodoc-page {
+  display: block;
   font: 16px -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
   line-height: 1.5em;
   max-width: 960px;
@@ -116,5 +117,55 @@ xetodoc-section {
 xetodoc-footer  {
   font-size: 60%;
   color: #999;
+}
+
+/*************************************************************************
+ * Props Table
+ ************************************************************************/
+
+xetodoc-prop-table {
+  display: table;
+  border-collapse: collapse;
+}
+
+xetodoc-prop-tr {
+  display: table-row;
+  border-top: var(--divider-border);
+}
+
+xetodoc-prop-th {
+  display: table-cell;
+  font-weight: bold;
+  text-align: left;
+  vertical-align: text-top;
+  padding: 4px 10px 4px 0px;
+  white-space: nowrap;
+}
+
+xetodoc-prop-td {
+  display: table-cell;
+  padding: 4px 6px;
+}
+
+xetodoc-prop-th a {
+  color: var(--name-color);
+  text-decoration: none;
+}
+
+xetodoc-prop-th a:hover {
+  color: var(--name-color);
+  text-decoration: underline;
+}
+
+xetodoc-prop-td a {
+  text-decoration: none;
+}
+
+xetodoc-prop-td a:hover {
+  text-decoration: underline;
+}
+
+xetodoc-prop-td p {
+  margin: 0;
 }
 
