xetodoc: parse doc index and write chapter markdown

--- a/src/tool/xetodoc/res/css/style.css
+++ b/src/tool/xetodoc/res/css/style.css
@@ -169,7 +169,6 @@ xetodoc-prop-td p {
   margin: 0;
 }
 
-
 /***************************************************************
  * Slot Details
  **************************************************************/
@@ -188,5 +187,13 @@ xetodoc-slot a {
 xetodoc-slot a:hover {
   color: var(--name-color);
   text-decoration: underline;
+}
+
+/*************************************************************************
+ * Chapter
+ ************************************************************************/
+
+xetodoc-chapter {
+  display: block;
 }
 
