xetodoc: add chapter heading and tweak CSS

--- a/src/tool/xetodoc/res/css/style.css
+++ b/src/tool/xetodoc/res/css/style.css
@@ -195,5 +195,11 @@ xetodoc-slot a:hover {
 
 xetodoc-chapter {
   display: block;
+  margin: 1em 0;
+}
+
+xetodoc-chapter h1:not(:first-child) {
+  color: var(--name-color);
+  font-size: 1.5em;
 }
 
