xetodoc: support for nested slots

--- a/src/tool/xetodoc/res/css/style.css
+++ b/src/tool/xetodoc/res/css/style.css
@@ -189,6 +189,15 @@ xetodoc-slot a:hover {
   text-decoration: underline;
 }
 
+xetodoc-slot-nested {
+  display: block
+}
+
+xetodoc-slot-nested ul {
+  list-style-type: none;
+  padding: 0;
+}
+
 /*************************************************************************
  * Chapter
  ************************************************************************/
