xetodoc: initial html and css support for DocSearch pages

--- a/src/tool/xetodoc/res/css/style.css
+++ b/src/tool/xetodoc/res/css/style.css
@@ -234,3 +234,54 @@ xetodoc-chapter h3 {
   font-size: 1.1em;
 }
 
+/*************************************************************************
+ * Search
+ ************************************************************************/
+
+xetodoc-page form input[type=text] {
+  width: 600px;
+  border: 1px solid #bbb;
+  border-radius: 2px;
+  margin: 0;
+  padding: 6px;
+  font-size: 16px;
+}
+
+xetodoc-search-info {
+  padding: 10px 0 0 0;
+  font-size: 12px;
+  font-weight: bold;
+  color: #aaa;
+}
+
+xetodoc-search-hits {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+xetodoc-search-hit {
+  display: block;
+  margin-top: 20px;
+}
+
+xetodoc-search-hit h3 {
+  padding: 0 0 4px 0;
+  margin: 0;
+}
+
+xetodoc-search-hit a {
+  color: var(--name-color);
+  padding: 2px;
+  text-decoration: none;
+}
+
+xetodoc-search-hit a:hover {
+  text-decoration: underline;
+}
+
+xetodoc-search-hit p {
+  margin: 0;
+  padding: 0;
+}
+
