--- a/src/tool/xetodoc/res/css/style.css
+++ b/src/tool/xetodoc/res/css/style.css
@@ -11,6 +11,7 @@ xetodoc-page {
   font: 16px -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
   line-height: 1.5em;
   max-width: 960px;
+  margin-top: 1em;
 
   --divider-border: 1px solid #eee;
 
