xetodoc: tweak indexing to use func tag for functions

--- a/src/tool/xetodoc/res/css/style.css
+++ b/src/tool/xetodoc/res/css/style.css
@@ -272,7 +272,7 @@ xetodoc-search-hit h3 {
 }
 
 xetodoc-search-hit a {
-  color: var(--name-color);
+  color: var(--link-color);
   padding: 2px;
   text-decoration: none;
 }
